# ViDa

./: CSV_generator.cpp  README.md  importer.h  main.cpp  tuples.h
Documents/2018_08_07_11_42/: tables.odt
Main/: Analysis.m  CMakeLists.txt  GiNaC_sample.cpp  Maxima_Sage_test.cpp  Q19_dist_by_data.cpp  Q19_linear_iteraion_with_save.cpp  Q19_mixed.cpp  Q19_operators.cpp  Q19_operators.h  Q6_enhanced_hist_generation.cpp  Q6_linear_iteration_with_save.cpp  Q6_operators.cpp  Q6_simple_hist_random_generation.cpp  Q6_simple_random_generation.cpp  README.md  WolframFunctions.cpp  database_preparation.h  expressions.h  file_editor.cpp  find_histograms.cpp  generate_from_distribution.h  operators.cpp  operators.h  statistics.h  string_generator.cpp  tmp.cpp  transmitter.h  tuples.h  tuples2.h  wolfram_test.cpp
Main/Documents/: tpch_queries.html
Main/Sample Generated Codes/: Q6.cpp  Q9.cpp
TPC-H query 6/: Analysis.m  CMakeCache.txt  CMakeLists.txt  CSV_generator.cpp  Makefile  ND_data_generation.h  Q19_dist_by_data.cpp  Q19_linear_iteraion_with_save.cpp  Q19_mixed.cpp  Q6_enhanced_hist_generation.cpp  Q6_linear_iteration_without_save.cpp  Q6_simple_random_generation.cpp  README.md  ViDaG  ViDaG.cbp  cmake_install.cmake  data_operators.h  enhanced_hist_generation.cpp  file_editor.cpp  file_functions.h  generate_from_distribution.cpp  linear_iteration.cpp  linear_iteration_with_save.cpp  linear_iteration_without_save.cpp  main.cpp  operator.h  operators.cpp  operators.h  simple_hist_random_generation.cpp  simple_random_generation.cpp  statistics.h  string_generator.cpp  tuples.h  tuples2.h
ViDaG4/: CMakeLists.txt  CSV_generator.cpp  ND_data_generation.h
