cmake_minimum_required(VERSION 3.10)
project(cmake-build-debug/CMakeFiles/ViDaG)

set(CMAKE_CXX_STANDARD 11)

add_executable(ViDaG main.cpp)
add_executable(CSV_gen CSV_generator.cpp)
add_executable(file_editor file_editor.cpp)
add_executable(simple_random simple_random_generation.cpp)
add_executable(linear_check_without_RAM_saving "linear_iteration_without_save.cpp")
add_executable(simple_hist simple_hist_random_generation.cpp)
add_executable(enhanced_hist enhanced_hist_generation.cpp)
add_executable(linear_iteration linear_iteration_with_save.cpp)
add_executable(string_gen string_generator.cpp)
add_executable(dist_gen generate_from_distribution.cpp)
