cmake_minimum_required(VERSION 3.10)
project(cmake-build-debug/CMakeFiles/ViDaG)

set(CMAKE_CXX_STANDARD 11)

add_executable(file_editor file_editor.cpp)
add_executable(Q6_simple_random Q6_simple_random_generation.cpp)
add_executable(Q6_LIWOS "Q6_linear_iteration_without_save.cpp")
add_executable(Q6_histogram Q6_simple_hist_random_generation.cpp)
add_executable(Q6_sampling Q6_enhanced_hist_generation.cpp)
add_executable(Q6_LIWS Q6_linear_iteration_with_save.cpp)
add_executable(string_gen string_generator.cpp)
add_executable(dist_gen generate_from_distribution.cpp)
add_executable(Q19_LIWS Q19_linear_iteraion_with_save.cpp)
add_executable(Q19_dist Q19_distribution.cpp)
add_executable(Q19_mixes Q19_mixed.cpp)